[package]
name = "fakealarmbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.7", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.18", features = ["rt-multi-thread", "macros"] }
mongodb = { version = "2.0.2", features = ["tokio-runtime"] }
async-trait = "0.1.52"
anyhow = "1.0"